// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android supports fetching a single matching element 1`] = `
Object {
  "using": "-android uiautomator",
  "value": "new UiSelector().text(\\"Press Me!\\")",
}
`;

exports[`Android supports fetching elements containing the given text 1`] = `
Object {
  "using": "-android uiautomator",
  "value": "new UiSelector().textContains(\\"Test\\")",
}
`;

exports[`Android supports fetching elements starting with the given text 1`] = `
Object {
  "using": "-android uiautomator",
  "value": "new UiSelector().textStartsWith(\\"Test\\")",
}
`;

exports[`Android supports fetching multiple matching elements 1`] = `
Object {
  "using": "-android uiautomator",
  "value": "new UiSelector().text(\\"Press Me!\\")",
}
`;

exports[`iOS supports fetching a single matching element 1`] = `
Object {
  "using": "-ios predicate string",
  "value": "label = 'Press Me!'",
}
`;

exports[`iOS supports fetching elements containing the given text 1`] = `
Object {
  "using": "-ios predicate string",
  "value": "label CONTAINS 'Test'",
}
`;

exports[`iOS supports fetching elements starting with the given text 1`] = `
Object {
  "using": "-ios predicate string",
  "value": "label BEGINSWITH 'Test'",
}
`;

exports[`iOS supports fetching multiple matching elements 1`] = `
Object {
  "using": "-ios predicate string",
  "value": "label = 'Press Me!'",
}
`;
